--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     </div>
                     <div class="tab-contents" id="education">
                         <ul>
-                            <li><span>Present</span><br>sinhgad nstutite of technology</li>
+                            <li><span>Present</span><br>sinhgad institute of technology</li>
                             <li><span>2022</span><br>New Arts commerce and science college</li>
                             <li><span>2020</span><br>Sacred Heart Convent HIgh school</li>
                         </ul>
