--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     </div>
                     <div class="tab-contents active-tab" id="skills">
                         <ul>
-                            <li><span>Programing languages:</span><br>C++,Python, JavaScript.</li>
+                            <li><span>Programing languages:</span><br>C++,Python,JAVA,JavaScript.</li>
                             <li><span>Web Development</span><br>HTML, CSS, JavaScript, React.</li>
                             <li><span>Soft skills:</span><br>Leadership, Intellectual Curiosity, Communication, Responsibility.</li>
                         </ul>
